2005-08-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl,texi2html.init: don't handle quotation second arg
	as quotation don't have a second arg.
	* Tests/formatting/quotation.texi: add tests with ,
	* doc/texi2html.texi: update

2005-08-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: set the file name to the default file name if it 
	is undefined after the possible call to element_file_name. 
	Set the type to "top" for the top element.
	Never add an extension to TOC_FILE and TOP_FILE.
	* examples/book.init: update
	* doc/texi2html.texi: update

2005-08-03  Derek Price  <derek@ximbiot.com>

	* examples/mediawiki.init: Override use of <samp> with <code> since
	MediaWiki don't like it.

2005-07-28  Derek Price  <derek@ximbiot.com>

	* Makefile.am (dist_images_DATA): Restore reference to images/*,
	reversing change from 2005-07-19.

2005-07-28  Derek Price  <derek@ximbiot.com>

	* NEWS: Note file name override, mediawiki example, and empty file
	name extension fix.

2005-07-28  Derek Price  <derek@ximbiot.com>

	* images/*.png: Restore these files, reversing change from 2005-07-19,
	since RMS has declared that any free license is OK for image files and
	other data that is a secondary part of a program.
	* NEWS: Remove note about images/* removal.

2005-07-25  Derek Price  <derek@ximbiot.com>

	* examples/mediawiki.init: New file.

2005-07-25  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Allow substitution of all document file names.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am (dist_images_DATA): Don't reference missing image files.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Don't add the file extension when it is empty.  Some
	cleanup.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* images/*: Remove these files since they are distributed under a
	license incompatible with the GPL.
	* NEWS: Note images/* removal.  Repair some grammar.
	s/Automake 1.9.3/1.9.5/.
